--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>To Do List</h1>
+    <h1>To Do List for everyone!</h1>
     <form id="toDoForm">
         <input type="text" name="item" placeholder="enter">
         <button>Submit</button>
-    
     </form>
     
     <ul id="list"></ul>
